set up browser-sync and gulp for better workspace

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/hirotachi/Natours#readme",
   "devDependencies": {
-    "node-sass": "^4.9.3"
+    "browser-sync": "^2.24.7",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^4.0.1"
   }
 }
